# http

./: CMakeLists.txt  LICENSE  Makefile
httputil/: CMakeLists.txt  char_traits.cpp
httputil/char_traits/: core_traits.cpp  field_traits.cpp  uri_traits.cpp
httputil/field/: field.cpp
httputil/parser/: field_parser.cpp  uri_parser.cpp
httputil/uri/: char_traits.cpp  parser.cpp  uri.cpp
include/httputil/: char_traits.h  field.h  uri.h
include/httputil/char_traits/: core_traits.h  field_traits.h  uri_traits.h
include/httputil/parser/: field_parser.h  header_parser.h  uri_parser.h
include/httputil/uri/: builder.h  char_traits.h  defs.h  parser.h
tests/: CMakeLists.txt  test_char_traits.cpp  test_field_parser.cpp  test_uri_parser.cpp  test_uri_parser.csv
